2008/4/26 -- released version 2.3.6

* add custom style for active menu link
  -- tobi, patch by Daniel Rich drich employees.org

* honour the 'linkstyle' variable when zooming
  -- niko, reported by Wolfgang Tremmel as Debian bug #476404

* the 'ralf' fix for cgi which is not able to read the secrets file. -- tobi

* display "all the smoke" even when it gets cut at the top end of the graph
  --tobi

2008/3/29 -- released version 2.3.5

* make slaves kill their old children off before forking new ones when
  the configuration changes. Reported by David Behr. --niko

2008/3/28 -- released version 2.3.4

* fix 'loss_background' documentation. Reported by David Tomic. --niko

* fix local variable override handling in connection with nomasterpoll
  --niko

* add protocol level master/slave protocol to control upgrades --tobi

* fix ordering of menu entries again --tobi

* bail out if the master/slave shared secret file is world-readable
  or writable --niko

* add some security notes to the master/slave documentation --niko

* Switch message hash generation to Digest::HMAC_MD5 (bundled) since this
  prevents the extension attack. Note that this change requires that you
  upgrade client and server in sync (you should do that anyway, but
  especially because of this)! -- tobi

* make sure when loading the sortercache that we only load info about
  graphs presently in the config. --tobi

* optionally precreate the directory structure under 'dyndir' if
  'precreateperms' is set --niko

* store the slave updates in 'dyndir', defaulting to 'datadir' --niko

* change the slave update locking code so that reading works without
  write access to the temporary storage file --niko

* allow SSH probe to config rsa1 key -- Walery Kokarev

* make zooming work properly even for graphs generated with the
  navigator form time range fields. -- tobi

2008/3/10 -- released version 2.3.3

* use separate slave cache and longer slave timeout. this