@@ -1,3 +1,5 @@
+* allow slave names to have . in them but not target sections. --tobi
+
 2008/4/26 -- released version 2.3.6
 
 * add custom style for active menu link
